# zsearch

./: CMakeLists.txt  Dockerfile  README.md  config.h  git.h  git.h.in
src/: config.txt  zsearch.cpp
src/common/: CMakeLists.txt  aquahash.hpp  avx_conf.h  booPHF.hpp  config.cpp  config.hpp  date.cpp  date.hpp  float16.hpp  howardDate.h  int128.hpp  log.cpp  log.hpp  tools.cpp  tools.hpp
src/devices/: CMakeLists.txt
src/dictionary/: CMakeLists.txt  crc32c.cpp  crc32c.hpp  dictionary.cpp  dictionary.hpp  dictionaryAllocator.cpp  dictionaryAllocator.hpp  dictionaryManager.cpp  dictionaryManager.hpp
src/floaxie/: atof.hpp  bit_ops.hpp  cached_power.hpp  conversion_status.hpp  default_fallback.hpp  diy_fp.hpp  fraction.hpp  ftoa.hpp  grisu.hpp  huge_val.hpp  integer_of_size.hpp  k_comp.hpp  krosh.hpp  memwrap.hpp  powers_ten.hpp  powers_ten_double.hpp  powers_ten_single.hpp  prettify.hpp  print.hpp  static_pow.hpp  type_punning_cast.hpp
src/mapping/: CMakeLists.txt  indexDefinition.cpp  indexDefinition.hpp  indexDefinitionManager.cpp  indexDefinitionManager.hpp  mappingParser.cpp  mappingParser.hpp  mapping_types.cpp  mapping_types.hpp
src/queries/: CMakeLists.txt  queryStatus.hpp
src/repository/: CMakeLists.txt  baseIndex.cpp  baseIndex.hpp  dataImporter.cpp  dataImporter.hpp  datajoin.cpp  datajoin.hpp  fixedIndex.cpp  fixedIndex.hpp  importFile.cpp  importFile.hpp  importFileBase.cpp  importFileBase.hpp  importLZ4File.cpp  importLZ4File.hpp  importTextFile.cpp  importTextFile.hpp  (+9 more)
tests/: CMakeLists.txt  filter.cpp  queries.py
tools/: git_watcher.cmake
(+173 files in other folders)
